fixed spacing on thumbnails, added logic for projects that have images

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -57,7 +57,7 @@ p {
 .thumbnail {
   @include border-radius(10px); 
 	float: left;
-	margin: 0 13px 0;
+	margin: 0 13px 25px;
   padding: 2px; 
   width: 300px; 
   .caption {
